// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`until.rb 1`] = `
until x > 5
  do_something
  do_something_else
end
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
until x > 5
  do_something
  do_something_else
end

`;

exports[`until_2.rb 1`] = `
do_something until some_condition
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
until some_condition
  do_something
end

`;
